# Reddit-Refresh-Online

./: .gitignore  .gitmodules  CNAME  Cargo.toml  Dockerfile  README.md  Rocket.toml  gettingStarted.html  go.mod  index.html  main.css  mainPage.html  samplePage1.html  samplePage2.html  setup_configs.py  start_server.sh  styleSamplePage1.css
RROnline/: db_funcs.go  reddit_refresh_online.go  routine_manager.go
assets/css/: index.css  main.css
assets/js/: main.js
design-test/: index.html  main.css  searchPage.html
logger/: logger.go
migrations/2018-06-17-020423_create_searches/: down.sql  up.sql
migrations/2018-06-17-155014_user_to_email/: down.sql  up.sql
migrations/2018-06-18-184157_add_user_info/: down.sql  up.sql
migrations/2018-06-18-193155_update_devices/: down.sql  up.sql
migrations/2018-06-18-193419_update_field/: down.sql  up.sql
migrations/2018-06-29-222045_last_results/: down.sql  up.sql
old_templates/: index.css  main.js
reddit-refresh-online/: Cargo.toml
reddit-refresh-online/src/: main.rs
reddit_refresh_online/: reddit_refresh_online.go
src/: lib.rs  main.go  main.rs  models.rs  schema.rs  searches_db.rs
templates/: gettingStarted.html  index.html  index.html.hbs  main.css  mainPage.html  searchPage.html
