[package]
name = "reddit-refresh-online"
version = "0.1.0"
authors = ["Nicholas <dojoman19@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["postgres"] }
dotenv = "0.13.0"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
reqwest = "0.8.6"
serde_json = "1.0.22"
cookie = "0.9.2"
serde_derive = "1.0.68"
serde = "1.0.66"
state = "0.4.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "json"]