[package]
name = "reddit-refresh-online"
version = "0.1.0"
authors = ["Nicholas <dojoman19@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
reqwest = "0.9.5"
serde_json = "1.0.33"
cookie = "0.11.0"
serde_derive = "1.0.82"
serde = "1.0.82"
hyper = "0.12.19"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "json"]